--- a/about.html
+++ b/about.html
@@ -1,1 +1,1 @@
-just a 12 year old just coding                never forget you gus
+just a 12 year old just coding                never forget you gus.
